@@ -77,31 +77,31 @@
 #  define LM_CONSOLE_PARITY   CONFIG_UART2_PARITY
 #  define LM_CONSOLE_2STOP    CONFIG_UART2_2STOP
 #elif defined(CONFIG_UART3_SERIAL_CONSOLE)
-#  define LM_CONSOLE_BASE     LM_UART2_BASE
+#  define LM_CONSOLE_BASE     LM_UART3_BASE
 #  define LM_CONSOLE_BAUD     CONFIG_UART3_BAUD
 #  define LM_CONSOLE_BITS     CONFIG_UART3_BITS
 #  define LM_CONSOLE_PARITY   CONFIG_UART3_PARITY
 #  define LM_CONSOLE_2STOP    CONFIG_UART3_2STOP
 #elif defined(CONFIG_UART4_SERIAL_CONSOLE)
-#  define LM_CONSOLE_BASE     LM_UART2_BASE
+#  define LM_CONSOLE_BASE     LM_UART4_BASE
 #  define LM_CONSOLE_BAUD     CONFIG_UART4_BAUD
 #  define LM_CONSOLE_BITS     CONFIG_UART4_BITS
 #  define LM_CONSOLE_PARITY   CONFIG_UART4_PARITY
 #  define LM_CONSOLE_2STOP    CONFIG_UART4_2STOP
 #elif defined(CONFIG_UART5_SERIAL_CONSOLE)
-#  define LM_CONSOLE_BASE     LM_UART2_BASE
+#  define LM_CONSOLE_BASE     LM_UART5_BASE
 #  define LM_CONSOLE_BAUD     CONFIG_UART5_BAUD
 #  define LM_CONSOLE_BITS     CONFIG_UART5_BITS
 #  define LM_CONSOLE_PARITY   CONFIG_UART5_PARITY
 #  define LM_CONSOLE_2STOP    CONFIG_UART5_2STOP
 #elif defined(CONFIG_UART6_SERIAL_CONSOLE)
-#  define LM_CONSOLE_BASE     LM_UART2_BASE
+#  define LM_CONSOLE_BASE     LM_UART6_BASE
 #  define LM_CONSOLE_BAUD     CONFIG_UART6_BAUD
 #  define LM_CONSOLE_BITS     CONFIG_UART6_BITS
 #  define LM_CONSOLE_PARITY   CONFIG_UART6_PARITY
 #  define LM_CONSOLE_2STOP    CONFIG_UART6_2STOP
 #elif defined(CONFIG_UART7_SERIAL_CONSOLE)
-#  define LM_CONSOLE_BASE     LM_UART2_BASE
+#  define LM_CONSOLE_BASE     LM_UART7_BASE
 #  define LM_CONSOLE_BAUD     CONFIG_UART7_BAUD
 #  define LM_CONSOLE_BITS     CONFIG_UART7_BITS
 #  define LM_CONSOLE_PARITY   CONFIG_UART7_PARITY
@@ -354,7 +354,4 @@ void up_lowsetup(void)
   ctl |= (UART_CTL_UARTEN|UART_CTL_TXE|UART_CTL_RXE);
   putreg32(ctl, LM_CONSOLE_BASE+LM_UART_CTL_OFFSET);
 #endif
-
 }
-
-
